// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migrate existing angular-components to barista components should add barista icons to the angular.json 1`] = `
Object {
  "cli": Object {
    "defaultCollection": "@nrwl/angular",
  },
  "defaultProject": "myapp",
  "projects": Object {
    "myapp": Object {
      "architect": Object {
        "build": Object {
          "builder": "@angular-devkit/build-angular:browser",
          "options": Object {
            "aot": true,
            "assets": Array [
              "apps/myapp/src/favicon.ico",
              "apps/myapp/src/assets",
              Object {
                "glob": "**/*",
                "input": "node_modules/@dynatrace/barista-fonts/fonts/",
                "output": "/fonts",
              },
              Object {
                "glob": "metadata.json",
                "input": "node_modules/@dynatrace/barista-icons",
                "output": "/assets/icons",
              },
              Object {
                "glob": "*.svg",
                "input": "node_modules/@dynatrace/barista-icons",
                "output": "/assets/icons",
              },
            ],
            "index": "apps/myapp/src/index.html",
            "main": "apps/myapp/src/main.ts",
            "outputPath": "dist/apps/myapp",
            "polyfills": "apps/myapp/src/polyfills.ts",
            "scripts": Array [],
            "styles": Array [
              "node_modules/@dynatrace/barista-fonts/typography.scss",
              "node_modules/@dynatrace/barista-components/style/index.scss",
              "apps/myapp/src/styles.scss",
            ],
            "tsConfig": "apps/myapp/tsconfig.app.json",
          },
        },
      },
      "projectType": "application",
      "root": "apps/myapp",
      "sourceRoot": "apps/myapp/src",
    },
    "myapp-e2e": Object {
      "architect": Object {
        "e2e": Object {
          "builder": "@nrwl/cypress:cypress",
          "configurations": Object {
            "production": Object {
              "devServerTarget": "myapp:serve:production",
            },
          },
          "options": Object {
            "cypressConfig": "apps/myapp-e2e/cypress.json",
            "devServerTarget": "myapp:serve",
            "tsConfig": "apps/myapp-e2e/tsconfig.e2e.json",
          },
        },
        "lint": Object {
          "builder": "@angular-devkit/build-angular:tslint",
          "options": Object {
            "exclude": Array [
              "**/node_modules/**",
              "!apps/myapp-e2e/**",
            ],
            "tsConfig": Array [
              "apps/myapp-e2e/tsconfig.e2e.json",
            ],
          },
        },
      },
      "projectType": "application",
      "root": "apps/myapp-e2e",
      "sourceRoot": "apps/myapp-e2e/src",
    },
    "some-lib": Object {
      "architect": Object {
        "lint": Object {
          "builder": "@angular-devkit/build-angular:tslint",
          "options": Object {
            "exclude": Array [
              "**/node_modules/**",
              "!libs/some-lib/**",
            ],
            "tsConfig": Array [
              "libs/some-lib/tsconfig.lib.json",
              "libs/some-lib/tsconfig.spec.json",
            ],
          },
        },
        "test": Object {
          "builder": "@nrwl/jest:jest",
          "options": Object {
            "jestConfig": "libs/some-lib/jest.config.js",
            "setupFile": "libs/some-lib/src/test-setup.ts",
            "tsConfig": "libs/some-lib/tsconfig.spec.json",
          },
        },
      },
      "prefix": "mc",
      "projectType": "library",
      "root": "libs/some-lib",
      "schematics": Object {},
      "sourceRoot": "libs/some-lib/src",
    },
  },
  "version": 1,
}
`;

exports[`Migrate existing angular-components to barista components should add styles correctly even if there is no styles array in the angular.json  1`] = `
Object {
  "projects": Object {
    "myapp": Object {
      "architect": Object {
        "build": Object {
          "builder": "@angular-devkit/build-angular:browser",
          "options": Object {
            "assets": Array [
              Object {
                "glob": "**/*",
                "input": "node_modules/@dynatrace/barista-fonts/fonts/",
                "output": "/fonts",
              },
            ],
            "index": "apps/myapp/src/index.html",
            "main": "apps/myapp/src/main.ts",
            "outputPath": "dist/apps/myapp",
            "polyfills": "apps/myapp/src/polyfills.ts",
            "styles": Array [
              "node_modules/@dynatrace/barista-fonts/typography.scss",
              "node_modules/@dynatrace/barista-components/style/index.scss",
            ],
            "tsConfig": "apps/myapp/tsconfig.app.json",
          },
        },
      },
      "projectType": "application",
      "root": "apps/myapp",
      "sourceRoot": "apps/myapp/src",
    },
  },
  "version": 1,
}
`;

exports[`Migrate existing angular-components to barista components should update imports of @dynatrace/angular-components to barista-components in package.json 1`] = `
Object {
  "dependencies": Object {
    "@angular/animations": "^8.2.12",
    "@angular/cdk": "^8.2.12",
    "@angular/common": "^8.2.12",
    "@angular/core": "^8.2.12",
    "@dynatrace/barista-components": "^5.0.0",
    "@dynatrace/barista-fonts": ">= 1.0.0 < 2",
    "@dynatrace/barista-icons": ">= 3.0.0 < 4",
    "@types/highcharts": "^5.0.23",
    "d3-scale": "^3.0.0",
    "d3-shape": "^1.3.5",
    "highcharts": "^6.0.7",
  },
}
`;

exports[`Migrate existing angular-components to barista components should update the legacy angular json 1`] = `
Object {
  "projects": Object {
    "myapp": Object {
      "architect": Object {
        "build": Object {
          "builder": "@angular-devkit/build-angular:browser",
          "options": Object {
            "aot": true,
            "assets": Array [
              "apps/myapp/src/favicon.ico",
              "apps/myapp/src/assets",
              Object {
                "glob": "**/*",
                "input": "node_modules/@dynatrace/barista-fonts/fonts/",
                "output": "/fonts",
              },
              Object {
                "glob": "**",
                "input": "node_modules/@dynatrace/barista-components/assets",
                "output": "/cache",
              },
              Object {
                "glob": "*.svg",
                "input": "node_modules/@dynatrace/barista-icons",
                "output": "/cache/icons",
              },
            ],
            "index": "apps/myapp/src/index.html",
            "main": "apps/myapp/src/main.ts",
            "outputPath": "dist/apps/myapp",
            "polyfills": "apps/myapp/src/polyfills.ts",
            "scripts": Array [],
            "styles": Array [
              "node_modules/@dynatrace/barista-fonts/typography.scss",
              "apps/myapp/src/styles.scss",
            ],
            "tsConfig": "apps/myapp/tsconfig.app.json",
          },
        },
      },
      "projectType": "application",
      "root": "apps/myapp",
      "sourceRoot": "apps/myapp/src",
    },
  },
  "version": 1,
}
`;

exports[`Migrate existing angular-components to barista components should update the main ngModule with the correct providers 1`] = `
"import { BrowserModule } from '@angular/platform-browser';
import { NgModule } from '@angular/core';

import { AppComponent } from './app.component';

@NgModule({
  declarations: [
    AppComponent
  ],
  imports: [
    BrowserModule
  ],
  providers: [],
  bootstrap: [AppComponent]
})
export class AppModule { }
"
`;

exports[`New workspace should add @angular/platform-browser-dynamic 1`] = `
Object {
  "dependencies": Object {
    "@angular/animations": "^8.2.12",
    "@angular/cdk": "^8.2.12",
    "@angular/common": "^8.2.12",
    "@angular/compiler": "^8.2.12",
    "@angular/core": "^8.2.12",
    "@dynatrace/barista-components": "^5.0.0",
    "@dynatrace/barista-fonts": ">= 1.0.0 < 2",
    "@dynatrace/barista-icons": ">= 3.0.0 < 4",
    "@types/highcharts": "^5.0.23",
    "d3-scale": "^3.0.0",
    "d3-shape": "^1.3.5",
    "highcharts": "^6.0.7",
  },
  "devDependencies": Object {
    "@angular-devkit/build-angular": "^0.803.15",
    "@angular-devkit/build-webpack": "^0.803.15",
    "@angular-devkit/schematics": "^8.3.15",
    "@angular/cli": "^8.3.15",
  },
}
`;

exports[`New workspace should add all the required modules in a fresh create angular app: angular.json 1`] = `
Object {
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "defaultProject": "myapp",
  "newProjectRoot": "apps",
  "projects": Object {
    "myapp": Object {
      "architect": Object {
        "build": Object {
          "builder": "@angular-devkit/build-angular:browser",
          "configurations": Object {
            "production": Object {
              "budgets": Array [
                Object {
                  "maximumError": "5mb",
                  "maximumWarning": "2mb",
                  "type": "initial",
                },
                Object {
                  "maximumError": "10kb",
                  "maximumWarning": "6kb",
                  "type": "anyComponentStyle",
                },
              ],
              "buildOptimizer": true,
              "extractCss": true,
              "extractLicenses": true,
              "fileReplacements": Array [
                Object {
                  "replace": "apps/myapp/src/environments/environment.ts",
                  "with": "apps/myapp/src/environments/environment.prod.ts",
                },
              ],
              "namedChunks": false,
              "optimization": true,
              "outputHashing": "all",
              "sourceMap": false,
              "vendorChunk": false,
            },
          },
          "options": Object {
            "aot": true,
            "assets": Array [
              "apps/myapp/src/favicon.ico",
              "apps/myapp/src/assets",
              Object {
                "glob": "**/*",
                "input": "node_modules/@dynatrace/barista-fonts/fonts/",
                "output": "/fonts",
              },
              Object {
                "glob": "metadata.json",
                "input": "node_modules/@dynatrace/barista-icons",
                "output": "/assets/icons",
              },
              Object {
                "glob": "*.svg",
                "input": "node_modules/@dynatrace/barista-icons",
                "output": "/assets/icons",
              },
            ],
            "index": "apps/myapp/src/index.html",
            "main": "apps/myapp/src/main.ts",
            "outputPath": "dist/myapp",
            "polyfills": "apps/myapp/src/polyfills.ts",
            "scripts": Array [],
            "styles": Array [
              "node_modules/@dynatrace/barista-fonts/typography.scss",
              "node_modules/@dynatrace/barista-components/style/index.scss",
              "apps/myapp/src/styles.scss",
            ],
            "tsConfig": "apps/myapp/tsconfig.app.json",
          },
        },
        "e2e": Object {
          "builder": "@angular-devkit/build-angular:protractor",
          "configurations": Object {
            "production": Object {
              "devServerTarget": "myapp:serve:production",
            },
          },
          "options": Object {
            "devServerTarget": "myapp:serve",
            "protractorConfig": "apps/myapp/e2e/protractor.conf.js",
          },
        },
        "extract-i18n": Object {
          "builder": "@angular-devkit/build-angular:extract-i18n",
          "options": Object {
            "browserTarget": "myapp:build",
          },
        },
        "lint": Object {
          "builder": "@angular-devkit/build-angular:tslint",
          "options": Object {
            "exclude": Array [
              "**/node_modules/**",
            ],
            "tsConfig": Array [
              "apps/myapp/tsconfig.app.json",
              "apps/myapp/tsconfig.spec.json",
              "apps/myapp/e2e/tsconfig.json",
            ],
          },
        },
        "serve": Object {
          "builder": "@angular-devkit/build-angular:dev-server",
          "configurations": Object {
            "production": Object {
              "browserTarget": "myapp:build:production",
            },
          },
          "options": Object {
            "browserTarget": "myapp:build",
          },
        },
        "test": Object {
          "builder": "@angular-devkit/build-angular:karma",
          "options": Object {
            "assets": Array [
              "apps/myapp/src/favicon.ico",
              "apps/myapp/src/assets",
            ],
            "karmaConfig": "apps/myapp/karma.conf.js",
            "main": "apps/myapp/src/test.ts",
            "polyfills": "apps/myapp/src/polyfills.ts",
            "scripts": Array [],
            "styles": Array [
              "apps/myapp/src/styles.scss",
            ],
            "tsConfig": "apps/myapp/tsconfig.spec.json",
          },
        },
      },
      "prefix": "app",
      "projectType": "application",
      "root": "apps/myapp",
      "schematics": Object {
        "@schematics/angular:class": Object {
          "skipTests": true,
        },
        "@schematics/angular:component": Object {
          "skipTests": true,
          "style": "scss",
        },
        "@schematics/angular:directive": Object {
          "skipTests": true,
        },
        "@schematics/angular:guard": Object {
          "skipTests": true,
        },
        "@schematics/angular:interceptor": Object {
          "skipTests": true,
        },
        "@schematics/angular:module": Object {
          "skipTests": true,
        },
        "@schematics/angular:pipe": Object {
          "skipTests": true,
        },
        "@schematics/angular:service": Object {
          "skipTests": true,
        },
      },
      "sourceRoot": "apps/myapp/src",
    },
  },
  "version": 1,
}
`;

exports[`New workspace should add all the required modules in a fresh create angular app: app.module.ts 1`] = `
"import { BrowserModule } from '@angular/platform-browser';
import { NgModule } from '@angular/core';
import { AppComponent } from './app.component';
import { HttpClientModule } from '@angular/common/http';
import { DtIconModule } from '@dynatrace/barista-components/icon';
import { BrowserAnimationsModule } from '@angular/platform-browser/animations';
@NgModule({
    declarations: [
        AppComponent
    ],
    imports: [
        BrowserModule,
        BrowserAnimationsModule,
        DtIconModule.forRoot({ svgIconLocation: '/assets/icons/{{name}}.svg' }),
        HttpClientModule
    ],
    providers: [],
    bootstrap: [AppComponent]
})
export class AppModule {
}
"
`;

exports[`New workspace should add all the required modules in a fresh create angular app: package.json 1`] = `
Object {
  "dependencies": Object {
    "@angular/animations": "^8.2.12",
    "@angular/cdk": "^8.2.12",
    "@angular/common": "^8.2.12",
    "@angular/compiler": "~10.1.6",
    "@angular/core": "^8.2.12",
    "@angular/forms": "~10.1.6",
    "@angular/platform-browser": "~10.1.6",
    "@angular/platform-browser-dynamic": "~10.1.6",
    "@angular/router": "~10.1.6",
    "@dynatrace/barista-components": "^5.0.0",
    "@dynatrace/barista-fonts": ">= 1.0.0 < 2",
    "@dynatrace/barista-icons": ">= 3.0.0 < 4",
    "@types/highcharts": "^5.0.23",
    "d3-scale": "^3.0.0",
    "d3-shape": "^1.3.5",
    "highcharts": "^6.0.7",
    "rxjs": "~6.6.0",
    "tslib": "^2.0.0",
    "zone.js": "~0.10.2",
  },
  "devDependencies": Object {
    "@angular-devkit/build-angular": "~0.1001.7",
    "@angular/cli": "~8.0.0",
    "@angular/compiler-cli": "~10.1.6",
    "@types/jasmine": "~3.5.0",
    "@types/jasminewd2": "~2.0.3",
    "@types/node": "^12.11.1",
    "codelyzer": "^6.0.0",
    "jasmine-core": "~3.6.0",
    "jasmine-spec-reporter": "~5.0.0",
    "karma": "~5.0.0",
    "karma-chrome-launcher": "~3.1.0",
    "karma-coverage-istanbul-reporter": "~3.0.2",
    "karma-jasmine": "~4.0.0",
    "karma-jasmine-html-reporter": "^1.5.0",
    "protractor": "~7.0.0",
    "ts-node": "~8.3.0",
    "tslint": "~6.1.0",
    "typescript": "~4.0.2",
  },
  "name": "workspace",
  "private": true,
  "scripts": Object {
    "build": "ng build",
    "e2e": "ng e2e",
    "lint": "ng lint",
    "ng": "ng",
    "start": "ng serve",
    "test": "ng test",
  },
  "version": "0.0.0",
}
`;

exports[`New workspace should add import the No operation animations module from angular when animations is set to false 1`] = `
"import { BrowserModule } from '@angular/platform-browser';
import { NgModule } from '@angular/core';
import { AppComponent } from './app.component';
import { HttpClientModule } from '@angular/common/http';
import { DtIconModule } from '@dynatrace/barista-components/icon';
import { NoopAnimationsModule } from '@angular/platform-browser/animations';
@NgModule({
    declarations: [
        AppComponent
    ],
    imports: [
        BrowserModule,
        NoopAnimationsModule,
        DtIconModule.forRoot({ svgIconLocation: '/assets/icons/{{name}}.svg' }),
        HttpClientModule
    ],
    providers: [],
    bootstrap: [AppComponent]
})
export class AppModule {
}
"
`;

exports[`New workspace should add the \`@angular/animations\` package with the same version as the \`@angular/core\` package when specified 1`] = `
Object {
  "dependencies": Object {
    "@angular/animations": "^8.2.12",
    "@angular/cdk": "^8.2.12",
    "@angular/common": "^8.2.12",
    "@angular/compiler": "^8.2.12",
    "@angular/core": "^8.2.12",
    "@dynatrace/barista-components": "^5.0.0",
    "@dynatrace/barista-fonts": ">= 1.0.0 < 2",
    "@dynatrace/barista-icons": ">= 3.0.0 < 4",
    "@types/highcharts": "^5.0.23",
    "d3-scale": "^3.0.0",
    "d3-shape": "^1.3.5",
    "highcharts": "^6.0.7",
  },
  "devDependencies": Object {
    "@angular-devkit/build-angular": "^0.803.15",
    "@angular-devkit/build-webpack": "^0.803.15",
    "@angular-devkit/schematics": "^8.3.15",
    "@angular/cli": "^8.3.15",
  },
}
`;

exports[`New workspace shouldn't add @angular/animations\` package if already installed 1`] = `
Object {
  "dependencies": Object {
    "@angular/animations": "^8.2.12",
    "@angular/cdk": "^8.2.12",
    "@angular/common": "^8.2.12",
    "@angular/core": "^8.2.12",
    "@dynatrace/barista-components": "^5.0.0",
    "@dynatrace/barista-fonts": ">= 1.0.0 < 2",
    "@dynatrace/barista-icons": ">= 3.0.0 < 4",
    "@types/highcharts": "^5.0.23",
    "d3-scale": "^3.0.0",
    "d3-shape": "^1.3.5",
    "highcharts": "^6.0.7",
  },
}
`;
